# rusty-hackathon-boilerplate

./: Dockerfile  README.md
frontend/: package.json
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/layouts/: Base.tsx
frontend/src/pages/: FourZeroFour.tsx
frontend/src/redux/: store.ts
frontend/src/redux/apiSlices/: index.ts
frontend/src/redux/slices/: HELP.md  index.ts
frontend/src/redux/slices/user/: slice.ts
frontend/src/routes/: public.route.ts  public.routes.ts  user.route.ts
frontend/src/zod/: route.z.ts  user.z.ts
frontend/src/zod/config/: index.ts
frontend/src/zod/config/schema/: env.z.ts  route.z.ts  user.z.ts
server/: Cargo.toml
server/src/: env.rs  lib.rs  main.rs
server/src/db/schema/: user.rs
server/src/routes/: mod.rs
server/src/utils/: jwt.rs
